Correct gap & width Fortalezas

--- a/src/scss/layout/_equipo.scss
+++ b/src/scss/layout/_equipo.scss
@@ -110,14 +110,6 @@
   .fortalezas-debilidades {
     margin-right: 13.9rem;
     margin-left: 13.9rem;
-    gap: 8rem;
-  }
-
-  .fortalezas{
-    width: 400px;
-  }
-
-  .debilidades{
-    width: 400px;
+    gap: 10rem;
   }
 }
